app/assets/stylesheets/custom.css
/* ... */
.inline_form.editInvoice .comments-content a {
    position: absolute;
    color: #b5b5b5;
}
.inline_form.editInvoice .comments-content a i {
    font-size: 24px; }
.inline_form.editInvoice .comments-content textarea {
    border: none;
    padding-left: 44px;
    resize: none;
    padding-top: 22px;
    height: auto; }
.inline_form.editInvoice .comments-content textarea:focus {
    outline: none; }
.inline_form.editInvoice .commentSection {
    padding: 0 44px; }

.inline_form.editInvoice .info-section .info-left-section span i.material-icons {
    font-size: 14px;
    line-height: 20px;
    vertical-align: bottom;
    color: #b5b5b5;
}
.inline_form.editInvoice .content_bottom{
    padding: 0 44px 20px;
}

.site-btn, .site-btn:hover, .site-btn:focus{
    background-color: #09b8e2 !important;
    color: white !important;
}

.btn-flat, .btn-flat:hover{
    background-color: rgba(0, 0, 0, 0.2);
    box-shadow: none;
    color: white;
}

.recurring_invoice_container{
    height: 190px !important;
    float: right !important;
    padding: 0px !important;
}

.hide_visibility{
    visibility: hidden;
}

.flex-item .invoice.card-white-panel .card-footer {
    height: 50px;
}
.staff_rate input{
    width: 38px !important;
}

.new-project-page .input-field label{
top: 0px;
}
.mg-btm{
    margin-bottom: 6px !important;
}

.invoice-card .invoice-details h5{
    margin-bottom: 2px !important;
}
.invoice-card .invoice-details strong{
    margin-bottom: 4px !important;
}

[type="radio"]:checked + label:after, [type="radio"].with-gap:checked + label:after{
    background: #09b8e2 !important;
}

form .select-wrapper .dropdown-content {
    max-height: 200px !important;
}

form .select-wrapper .select-dropdown {
    height: auto;
}

.text-red{
    color: red;
}

.text-draft-partial{
    color: #f26522;
}

.new-invoice-holder .inline-select.select-wrapper {
    display: inline-block;
    margin-bottom: 0; }
.new-invoice-holder .inline-select.select-wrapper .caret {
    color: #b5b5b5;
    top: 0px;
}
.new-invoice-holder .inline-select.select-wrapper .dropdown-content {
    top: 40px !important;
    font-size: 14px;
    color: #454545;
    line-height: 24px;
    height: auto;
    margin-bottom: 0;
    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
.new-invoice-holder .inline-select.select-wrapper .dropdown-content li span {
    color: #454545;
    display: block;
    line-height: 22px;
    padding: 5px 10px;
    font-size: 14px;
    font-weight: 400; }

.modal .inline-select.small-select .caret {
    margin-bottom: 8px;
    right: 10px; }
.modal .inline-select.content-select {
    width: 122px;
    vertical-align: middle; }

.new-invoice-holder .inline-select.select-wrapper input.select-dropdown {
    border-bottom: none;
}

.new-invoice-holder .recurring_occurrences{
    height: 32px;
}

.invoice_template .select-wrapper .caret{
    display: none !important;
}

.date-field-style{
    font-size: 11px !important;
    text-transform: uppercase;
    margin: 0 !important;
    width: 71px !important;
    border-bottom: 0 !important;
    height: 1rem !important;
    box-shadow: none !important;
    font-weight: bold !important;
}
.date-wrapper{
    font-family: "Roboto", sans-serif;
}
.calendar-icon{
    font-size: 18px !important;
    vertical-align: bottom !important;
    color: #b5b5b5 !important;
    margin: 0 3px 0 -1px !important;
    top: -1px !important;
    position: relative !important;
}
.date-wrapper span.next-invoice-date{
    font-size: 11px;
    text-transform: uppercase;
}

.date-wrapper span.payment-date{
    margin-left: 20px;
}
.md-input label:before {
    content: '* ';
    color: red;
    font-weight: bold;
}
.btn-position{
    padding-top: 15px;
}
.new-invoice-holder .inline-select.select-wrapper.payment-term-dropdown .caret{
    bottom: 15px;
    width: 128px;
}
.inline-select.payment-term-dropdown .dropdown-content{
    min-width: 130px;
    width: 130px !important;
}
.invoice-select-align input.select-dropdown{
    text-align: center !important;
}
#payments_form .submit_payment_form:hover {
    background-color: #09b8e2;
    color: #fff;
    border-color: #09b8e2; }
.fields-container{
    padding-bottom: 5px !important;
}
.invoice-checkbox-position{
     margin-top: -5px;
 }

